--- a/FoodDelivery/Pages/Admin/Categories/Index.cshtml
+++ b/FoodDelivery/Pages/Admin/Categories/Index.cshtml
@@ -5,18 +5,21 @@
     ViewData["Title"] = "Categories";
 }
 
-<h1>Categories</h1>
 
-<div class="container">
+
+<div class="border backgroundWhite container">
     <div class="row">
-        <div class="col-12 text-right">
+        <div class="col-6 text-right">
+            <h2 class="text-primary">Category List</h2>
+        </div>
+        <div class="col-6 text-right">
             <a asp-page="Upsert" asp-route-id="0" class="btn btn-primary">
-                <i class=""fas fa-plus"></i>&nbsp;Create New
+                <i class="" fas fa-plus"></i>&nbsp;Create New
             </a>
         </div>
     </div>
-
 </div>
+<br /><br />
 <table id="DT_load" class="table table-striped table-bordered">
     <thead>
         <tr>
