--- a/FoodDelivery/Pages/Admin/FoodTypes/Upsert.cshtml
+++ b/FoodDelivery/Pages/Admin/FoodTypes/Upsert.cshtml
@@ -6,7 +6,7 @@
         <div class="row px-2 mx-2 backgroundWhite border">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="col-12 px-13" style="border-bottom: 1px solid #325d88">
-                <h2 class="text-primary">@(Model.FoodTypeObj.MyProperty !=0 ? "Update" : "Create") Category</h2>
+                <h2 class="text-primary">@(Model.FoodTypeObj.Id !=0 ? "Update" : "Create") Category</h2>
                 <div class="col-8 pt-3">
                     <div class="form-group row">
                         <div class="col-3">
@@ -16,9 +16,9 @@
                             <input class="form-control" asp-for="FoodTypeObj.Name" />
                             <span class="text-danger" asp-validation-for="FoodTypeObj.Name"></span>
                         </div>
-                        @if (Model.FoodTypeObj.MyProperty != 0)
+                        @if (Model.FoodTypeObj.Id != 0)
                         {
-                            <input type="hidden" asp-for="FoodTypeObj.MyProperty" />
+                            <input type="hidden" asp-for="FoodTypeObj.Id" />
                         }
                     </div>
 
@@ -29,7 +29,7 @@
 
                             <div class="row">
                                 <div class="col-6">
-                                    <button type="submit" class="btn btn-primary form-control">@(Model.FoodTypeObj.MyProperty != 0 ? "Update" : "Create")</button>
+                                    <button type="submit" class="btn btn-primary form-control">@(Model.FoodTypeObj.Id != 0 ? "Update" : "Create")</button>
                                 </div>
                                 <div class="col-6">
                                     <a asp-page="./Index" class="btn btn-success form-control">Back to List</a>
