--- a/FoodDelivery/Pages/Admin/MenuItems/Upsert.cshtml
+++ b/FoodDelivery/Pages/Admin/MenuItems/Upsert.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @model FoodDelivery.Pages.Admin.MenuItems.UpsertModel
-@{ }
+@{ 
 
 
 <form method="post" asp-action="Upsert" enctype="multipart/form-data">
@@ -53,26 +53,26 @@
                 </div>
                 <div class="form-group row">
                     <div class="col-3">
-                        <label asp-for="MenuItemObj.MenuItem.Category"></label>
+                        <label asp-for="MenuItemObj.MenuItem.CategoryID"></label>
                     </div>
                     <div class="col-9">
-                        @Html.DropDownListFor(m => m.MenuItemObj.MenuItem.Category,
+                        @Html.DropDownListFor(m => m.MenuItemObj.MenuItem.CategoryID,
                                                         Model.MenuItemObj.CategoryList,
                                                         " - Please select a category - ",
                                                         new { @class = "form-control" })
-                        <span class="text-danger" asp-validation-for="MenuItemObj.MenuItem.Category"></span>
+                        <span class="text-danger" asp-validation-for="MenuItemObj.MenuItem.CategoryID"></span>
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-3">
-                        <label asp-for="MenuItemObj.MenuItem.FoodType"></label>
+                        <label asp-for="MenuItemObj.MenuItem.FoodTypeID"></label>
                     </div>
                     <div class="col-9">
-                        @Html.DropDownListFor(m => m.MenuItemObj.MenuItem.FoodType,
+                        @Html.DropDownListFor(m => m.MenuItemObj.MenuItem.FoodTypeID,
                                                         Model.MenuItemObj.FoodTypeList,
                                                         " - Please select a food type - ",
                                                         new { @class = "form-control" })
-                        <span class="text-danger" asp-validation-for="MenuItemObj.MenuItem.FoodType"></span>
+                        <span class="text-danger" asp-validation-for="MenuItemObj.MenuItem.FoodTypeID"></span>
                     </div>
                 </div>
                 <div class="form-group row">
@@ -103,7 +103,7 @@
 
     </div>
 </form>
-
+    }
 @section Scripts{
 
 
